--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -575,8 +575,9 @@ button {
 
 .game-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
+    padding:20px;
     justify-items: center;
 }
 
@@ -617,9 +618,4 @@ button {
     width: 200px;
     height: auto;
     margin-bottom: 20px;
-}
-@media (max-width: 600px) {
-    #main-nav {
-        flex-direction:column;
-    }
 }
