--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -18,7 +18,7 @@ nav ul {
 }
 
 nav ul li {
-    display: inline;
+    display: inline-block;
     margin: 0 15px;
 }
 
@@ -26,7 +26,6 @@ nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
-    display:flex;
 }
 
 header {
@@ -36,7 +35,7 @@ header {
     color: white;
 }
 
-a:-webkit-any-link {
+a {
     text-decoration: none;
 }
 
@@ -588,18 +587,23 @@ button {
 .game-item {
     background: white;
     padding: 15px;
+    width:100%;
+    height:auto;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     text-align: center;
 }
 
 .game-item img {
-    width: 150px;
+    width: 100%;
     height: auto;
     border-radius: 5px;
     margin-bottom: 10px;
 }
 
+.game-item p {
+    flex-grow:1;
+}
 .buy-btn {
     background: #007BFF;
     color: white;
@@ -622,4 +626,23 @@ button {
     width: 200px;
     height: auto;
     margin-bottom: 20px;
+}
+@media (max-width: 768px) {
+    .dashboard-container {
+        flex-direction: column;
+        align-items: center;     
+        gap: 10px;               
+    }
+    nav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;     
+        padding: 0;
+        margin: 0;
+    }
+
+    nav ul li {
+        display: block;  
+        margin: 10px 0;   
+    }
 }
