--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -587,7 +587,7 @@ button {
 .game-item {
     background: white;
     padding: 15px;
-    width:100%;
+    width:220px;
     height:auto;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
@@ -627,7 +627,7 @@ button {
     height: auto;
     margin-bottom: 20px;
 }
-@media (max-width: 768px) {
+@media (max-width: 600px) {
     .dashboard-container {
         flex-direction: column;
         align-items: center;     
