--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -75,6 +75,7 @@ main {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     text-align: center;
     width: 220px;
+    margin:10px;
     justify-content: space-between;
 }
 
@@ -593,6 +594,7 @@ button {
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     text-align: center;
+    margin:10px;
     justify-content: space-between;
 }
 
