--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -595,6 +595,7 @@ button {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     text-align: center;
     margin:10px;
+    display:flex;
     justify-content: space-between;
 }
 
