--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -76,6 +76,7 @@ main {
     text-align: center;
     width: 220px;
     margin:10px;
+    overflow:hidden;
     justify-content: space-between;
 }
 
@@ -561,7 +562,6 @@ button {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
-    width: 800px;
 }
 
 .search-box {
@@ -595,6 +595,7 @@ button {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     text-align: center;
     margin:10px;
+    overflow:hidden;
     justify-content: space-between;
 }
 
