--- a/csce242/04_js_intro/styles.css
+++ b/csce242/04_js_intro/styles.css
@@ -134,7 +134,7 @@ main {
 #toggle-nav div {
     width:25px;
     height:2px;
-    background-color:var(--gallery-color);
+    background-color:var(white);
     margin:6px 0;
 }
 
