--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -194,7 +194,8 @@ button:hover {
 }
 
 .about-section, .contact-section {
-    flex: 1;
+    display:flex;
+    flex-direction:column;
     padding: 20px;
 }
 
