--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -46,9 +46,8 @@ input {
     cursor: pointer;
 }
 .heart {
-    width: 100px;
-    height: 100px;
-    background-color: white;
+    font-size: 50px;
+    color: white;
 }
 button {
     margin: 5px;
