--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -1,13 +1,14 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #f5f5e1;
+    background-color: #e3f2fd;
+    color:#333;
 }
 .container {
     margin: auto;
     width: 50%;
     padding: 20px;
-    background-color: #000;
+    background-color: #1e88e5;
     color: white;
     border-radius: 10px;
 }
@@ -18,6 +19,10 @@ input {
 }
 .image-box, .heart-box {
     margin-top: 20px;
+}
+.image-box img, .heart-box .heart {
+    width: 150px;
+    height: 150px;
 }
 .hidden {
     display: none;
@@ -36,17 +41,18 @@ input {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    background-color: #1565c0;
     gap: 10px;
 }
 .nav-items a {
     text-decoration: none;
-    color: darkred;
+    color: white;
     padding: 5px;
     position: relative;
 }
 .nav-items a:not(:last-child)::after {
     content: " | ";
-    color: darkred;
+    color: white;
     position: absolute;
     right: -10px;
 }
@@ -64,6 +70,10 @@ button {
     padding: 10px;
     cursor: pointer;
 }
+#btn-red { background-color: #e53935; color: white; }
+#btn-green { background-color: #43a047; color: white; }
+#btn-blue { background-color: #1e88e5; color: white; }
+
 @media (max-width: 600px) {
     .nav-toggle {
         display: inline-block;
