--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -12,6 +12,10 @@ body {
     color: white;
     border-radius: 10px;
 }
+.container button {
+    text-align:left;
+    display:block;
+}
 input {
     padding: 10px;
     width: 80%;
