--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -14,7 +14,8 @@ body {
 }
 .container button {
     text-align:left;
-    display:block;
+    display:flex;
+    gap:10px;
 }
 input {
     padding: 10px;
