--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -17,10 +17,17 @@ input {
     width: 80%;
     margin-top: 10px;
 }
-.image-box, .heart-box {
+.heart-box {
     margin-top: 20px;
     width:150px;
     height:150px;
+}
+.image-box {
+    margin-top: 20px;
+    width:150px;
+    height:150px;
+    display:flex;
+    justify-content: center;
 }
 .hidden {
     display: none;
@@ -67,8 +74,6 @@ input {
     width:150px;
     height:auto;
     max-width:100%;
-    display:flex;
-    justify-content: center;
 }
 button {
     margin: 5px;
