--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -28,6 +28,7 @@ input {
     height:150px;
     display:flex;
     justify-content: center;
+    align-items: center;
 }
 .hidden {
     display: none;
