--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -26,9 +26,7 @@ input {
     margin-top: 20px;
     width:150px;
     height:150px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 .hidden {
     display: none;
