--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -24,8 +24,7 @@ input {
 }
 .image-box {
     margin-top: 20px;
-    width:150px;
-    height:150px;
+    width:100%;
     text-align: center;
 }
 .hidden {
@@ -73,6 +72,8 @@ input {
     width:150px;
     height:auto;
     max-width:100%;
+    display:block;
+    margin:0 auto;
 }
 button {
     margin: 5px;
