--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -12,15 +12,22 @@ body {
     color: white;
     border-radius: 10px;
 }
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
 input {
     padding: 10px;
     width: 80%;
     margin-top: 10px;
 }
 .heart-box {
-    margin-top: 20px;
-    width:150px;
-    height:150px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    width: 100%;
+    padding-left: 20px;
 }
 .image-box {
     margin-top: 20px;
