--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -14,8 +14,9 @@ body {
 }
 .button-container {
     display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
+    justify-content: flex-start;
+    width: 100%;
+    padding-left: 20px;
 }
 input {
     padding: 10px;
