edited styles assign8

--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -72,7 +72,7 @@ input {
     text-decoration: underline;
 }
 .heart {
-    font-size: 150px;
+    font-size: 100%;
     display: block;
     color: white;
 }
