edited styles assign8

--- a/csce242/assignments/assignment08/styles.css
+++ b/csce242/assignments/assignment08/styles.css
@@ -73,9 +73,8 @@ input {
     text-decoration: underline;
 }
 .heart {
-    font-size: 100%;
-    width:100%;
-    height:100%;
+    font-size: 180px;
+    line-height: 1;
     display: block;
     color: white;
 }
