--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -648,7 +648,43 @@ button {
     height: auto;
     margin-bottom: 20px;
 }
-@media (max-width: 600px) {
+<!--toggle-->
+#toggle-nav {
+    width: 30px;
+    height: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+#toggle-nav div {
+    width: 100%;
+    height: 4px;
+    background: black;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+#nav-items {
+    list-style: none;
+    display: flex;
+    gap: 15px;
+}
+
+#nav-items.hidden {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    #nav-items {
+        flex-direction:column;
+        background:#333;
+        position:absolute;
+        top:50px;
+        left:0;
+        width:100%;
+        padding:10px;
+    }
     .dashboard-container {
         flex-direction: column;
         align-items: center;     
