--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -658,32 +658,32 @@ button {
     cursor: pointer;
 }
 
-#toggle-nav div {
+.hidden {
+    display:none;
+}
+
+.toggle-nav div {
     width: 100%;
     height: 4px;
     background: black;
     transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
-#nav-items {
+.nav-items {
     list-style: none;
     display: flex;
     gap: 15px;
 }
 
-#nav-items.hidden {
+.nav-items.hidden {
     display: none;
 }
 
 @media (max-width: 768px) {
-    #nav-items {
+    .nav-items {
         flex-direction:column;
-        background:#333;
-        position:absolute;
-        top:50px;
-        left:0;
-        width:100%;
-        padding:10px;
+        align-items: center;
+        display:none;
     }
     .dashboard-container {
         flex-direction: column;
