--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -662,7 +662,7 @@ button {
     display:none;
 }
 
-.toggle-nav div {
+#toggle-nav div {
     width: 100%;
     height: 4px;
     background: black;
@@ -680,7 +680,7 @@ button {
 }
 
 @media (max-width: 768px) {
-    .nav-items {
+    #nav-items {
         flex-direction:column;
         align-items: center;
         display:none;
