--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -666,7 +666,6 @@ button {
     width: 100%;
     height: 4px;
     background: black;
-    transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
 .nav-items {
@@ -685,6 +684,11 @@ button {
         align-items: center;
         display:none;
     }
+
+    .nav-toggle {
+        display: inline-block;
+    }
+
     .dashboard-container {
         flex-direction: column;
         align-items: center;     
