--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -665,6 +665,10 @@ button {
 #toggle-nav div {
     width: 100%;
     height: 4px;
+    display:flex;
+    flex-direction:column;
+    justify-content: space-between;
+    cursor:pointer;
     background: black;
 }
 
