--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -648,38 +648,15 @@ button {
     height: auto;
     margin-bottom: 20px;
 }
-<!--toggle-->
-#toggle-nav {
-    width: 30px;
-    height: 25px;
-    display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    cursor: pointer;
-}
 
 .hidden {
     display:none;
-}
-
-#toggle-nav div {
-    width: 100%;
-    height: 4px;
-    display:flex;
-    flex-direction:column;
-    justify-content: space-between;
-    cursor:pointer;
-    background: black;
 }
 
 .nav-items {
     list-style: none;
     display: flex;
     gap: 15px;
-}
-
-.nav-items.hidden {
-    display: none;
 }
 
 @media (max-width: 768px) {
@@ -689,8 +666,10 @@ button {
         display:none;
     }
 
-    .nav-toggle {
-        display: inline-block;
+    #toggle-nav div {
+        width:25px;
+        height:2px;
+        margin:6px 0;
     }
 
     .dashboard-container {
