--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -648,9 +648,28 @@ button {
     height: auto;
     margin-bottom: 20px;
 }
+<!--toggle-->
+#toggle-nav {
+    width: 30px;
+    height: 25px;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+}
 
 .hidden {
     display:none;
+}
+
+#toggle-nav div {
+    width: 100%;
+    height: 4px;
+    display:flex;
+    flex-direction:column;
+    justify-content: space-between;
+    cursor:pointer;
+    background: black;
 }
 
 .nav-items {
@@ -666,10 +685,20 @@ button {
         display:none;
     }
 
-    #toggle-nav div {
-        width:25px;
-        height:2px;
-        margin:6px 0;
+    #nav-items {
+        display: none;
+        flex-direction: column;
+        background: white;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 100%;
+        padding: 10px;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .nav-toggle {
+        display: inline-block;
     }
 
     .dashboard-container {
