--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -669,7 +669,7 @@ button {
     flex-direction:column;
     justify-content: space-between;
     cursor:pointer;
-    background: black;
+    background: white;
 }
 
 .nav-items {
@@ -679,11 +679,6 @@ button {
 }
 
 @media (max-width: 768px) {
-    #nav-items {
-        flex-direction:column;
-        align-items: center;
-        display:none;
-    }
 
     #nav-items {
         display: none;
@@ -697,8 +692,8 @@ button {
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     }
 
-    .nav-toggle {
-        display: inline-block;
+    .toggle-nav div {
+        background:white;
     }
 
     .dashboard-container {
