--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -663,13 +663,10 @@ button {
 }
 
 #toggle-nav div {
-    width: 100%;
-    height: 4px;
-    display:flex;
-    flex-direction:column;
-    justify-content: space-between;
-    cursor:pointer;
-    background: white;
+    width:25px;
+    height:2px;
+    background:white;
+    margin:6px 0;
 }
 
 .nav-items {
@@ -678,7 +675,7 @@ button {
     gap: 15px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 768px) {
 
     #nav-items {
         display: none;
@@ -690,10 +687,6 @@ button {
         width: 100%;
         padding: 10px;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    }
-
-    .toggle-nav div {
-        background:white;
     }
 
     .dashboard-container {
@@ -712,5 +705,14 @@ button {
     nav ul li {
         display: block;  
         margin: 10px 0;   
+    }
+
+    @media only screen and (min-width: 1200px) { 
+        #toggle-nav {
+            display:none;
+        }
+        .hidden {
+            display:flex;
+        }
     }
 }
