--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -677,6 +677,10 @@ button {
 
 @media (max-width: 768px) {
 
+    #toggle-nav {
+        display: flex;
+    }
+
     #nav-items {
         display: none;
         flex-direction: column;
@@ -687,6 +691,10 @@ button {
         width: 100%;
         padding: 10px;
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    #nav-items.show {
+        display: flex;
     }
 
     .dashboard-container {
@@ -705,14 +713,5 @@ button {
     nav ul li {
         display: block;  
         margin: 10px 0;   
-    }
-
-    @media only screen and (min-width: 1200px) { 
-        #toggle-nav {
-            display:none;
-        }
-        .hidden {
-            display:flex;
-        }
     }
 }
