edited toggle to website

--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -675,7 +675,7 @@ button {
     gap: 15px;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
 
     #toggle-nav {
         display: flex;
