--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -667,6 +667,7 @@ button {
     height:2px;
     background:white;
     margin:6px 0;
+    display:none;
 }
 
 .nav-items {
@@ -675,10 +676,17 @@ button {
     gap: 15px;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
 
     #toggle-nav {
         display: flex;
+    }
+
+    #toggle-nav div {
+        width:25px;
+        height:2px;
+        background:white;
+        margin:6px 0;
     }
 
     #nav-items {
