--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -716,6 +716,7 @@ button {
 
 @media (max-width: 768px) {
     #nav-items {
+        display:flex;
         flex-direction: column; 
         align-items: center; 
         background: white;
@@ -727,6 +728,7 @@ button {
     }
 
     #secondary-nav {
+        display:flex;
         flex-direction: column; 
         align-items: center; 
         background: white;
@@ -735,5 +737,19 @@ button {
         left: 0;
         width: 100%;
         padding: 10px;
+    }
+
+    nav ul {
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+        padding: 0;
+        margin: 0;
+    }
+
+    nav ul li {
+        display: block;
+        width: 100%;
+        padding: 10px 0;
     }
 }
