--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -672,11 +672,11 @@ button {
     position:absolute;
 }
 
-.nav-items a {
+.nav a {
     border-bottom:2px solid transparent;
 }
 
-.nav-items a:hover {
+.nav a:hover {
     border-bottom:2px solid white;
 }
 
@@ -709,6 +709,30 @@ button {
 @media (max-width: 768px) {
     #nav-items {
         display:flex;
+        flex-direction: column; 
+        align-items: center; 
+        background: white;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 100%;
+        padding: 10px;
+    }
+
+    #secondary-nav {
+        display:flex;
+        flex-direction: column; 
+        align-items: center; 
+        background: white;
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 100%;
+        padding: 10px;
+    }
+
+    #toggle-nav {
+        display:none;
     }
 
     nav ul {
