--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -695,20 +695,6 @@ button {
 @media (min-width: 900px) {
     #nav-items {
         display:flex;
-    }
-
-    #nav-items li {
-        flex:1;
-    }
-
-    #toggle-nav {
-        display:none; 
-    }
-}
-
-@media (max-width: 768px) {
-    #nav-items {
-        display:flex;
         flex-direction: column; 
         align-items: center; 
         background: white;
@@ -731,17 +717,29 @@ button {
         padding: 10px;
     }
 
-    nav ul {
+    .dashboard-container {
         flex-direction: column;
-        width: 100%;
-        text-align: center;
+        align-items: center;     
+        gap: 10px;               
+    }
+    nav ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;     
         padding: 0;
         margin: 0;
     }
 
     nav ul li {
-        display: block;
-        width: 100%;
-        padding: 10px 0;
+        display: block;  
+        margin: 10px 0;   
+    }
+
+    #nav-items li {
+        flex:1;
+    }
+
+    #toggle-nav {
+        display:none; 
     }
 }
