--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -669,14 +669,13 @@ button {
     list-style: none;
     display: flex;
     gap: 15px;
-    position:absolute;
 }
 
-.nav a {
+.nav-items a {
     border-bottom:2px solid transparent;
 }
 
-.nav a:hover {
+.nav-items a:hover {
     border-bottom:2px solid white;
 }
 
@@ -698,7 +697,6 @@ button {
         flex-direction: column; 
         align-items: center; 
         background: white;
-        position: absolute;
         top: 50px;
         left: 0;
         width: 100%;
@@ -710,7 +708,6 @@ button {
         flex-direction: column; 
         align-items: center; 
         background: white;
-        position: absolute;
         top: 50px;
         left: 0;
         width: 100%;
