--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -696,7 +696,7 @@ button {
         display:flex !important;
         flex-direction: row; 
         align-items: center; 
-        background: white;
+        background: #1565c0;
         top: 50px;
         left: 0;
         width: 100%;
