--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -26,6 +26,11 @@ nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    border-bottom:2px solid transparent;
+}
+
+nav ul li a:hover {
+    border-bottom:2px solid white;
 }
 
 header {
@@ -671,14 +676,6 @@ button {
     gap: 15px;
 }
 
-.nav-items a {
-    border-bottom:2px solid transparent;
-}
-
-.nav-items a:hover {
-    border-bottom:2px solid white;
-}
-
 .secondary-nav a {
     border-bottom:2px solid transparent;
 }
@@ -720,5 +717,14 @@ button {
 
     #toggle-nav {
         display:none; 
+    }
+}
+
+@media (max-width: 768px) {
+    nav, .secondary-nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
     }
 }
