--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -727,4 +727,15 @@ button {
         align-items: center;
         width: 100%;
     }
+
+    #nav-items, .secondary-nav ul {
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+    }
+
+    #nav-items li, .secondary-nav ul li {
+        width: 100%;
+        padding: 10px 0;
+    }
 }
