edited toggle to website

--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -729,6 +729,7 @@ button {
     }
 
     #nav-items, .secondary-nav ul {
+        display:flex !important;
         flex-direction: column;
         width: 100%;
         text-align: center;
