--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -616,6 +616,7 @@ button {
 .game-item {
     background: white;
     padding: 10px;
+    margin:10px;
     width:220px;
     height:auto;
     border-radius: 5px;
