--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -119,7 +119,8 @@ button:hover {
 
 .grid-item img {
     width: 100%;
-    height: auto;
+    height: 200px;
+    object-fit:cover;
     border-radius: 5px;
 }
 
