--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -120,7 +120,7 @@ button:hover {
 .grid-item img {
     width: 100%;
     height: 200px;
-    object-fit:cover;
+    object-fit:contain;
     border-radius: 5px;
 }
 
