edited grid games

--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -111,7 +111,7 @@ button:hover {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     text-align: center;
     align-items:center;
-    justify-content: center;
+    justify-content: space-between;
     width: 220px;
     min-height:250px;
     margin:10px;
@@ -620,19 +620,23 @@ button {
 }
 
 .game-item {
+    display:flex;
+    flex-direction:column;
     background: white;
     padding: 10px;
     margin:10px;
     width:220px;
-    height:auto;
+    height:250px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    justify-content: space-between;
     text-align: center;
 }
 
 .game-item img {
     width: 100%;
-    height: auto;
+    height: 200px;
+    object-fit:contain;
     border-radius: 5px;
     margin-bottom: 10px;
 }
