--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -112,14 +112,14 @@ button:hover {
     text-align: center;
     align-items:center;
     justify-content: space-between;
-    width: 220px;
-    min-height:250px;
+    width: 100%;
+    height:auto;
     margin:10px;
 }
 
 .grid-item img {
     width: 100%;
-    height: 200px;
+    height: auto;
     object-fit:contain;
     border-radius: 5px;
 }
@@ -625,8 +625,8 @@ button {
     background: white;
     padding: 10px;
     margin:10px;
-    width:220px;
-    height:250px;
+    width:100%;
+    height:auto;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     justify-content: space-between;
@@ -635,7 +635,7 @@ button {
 
 .game-item img {
     width: 100%;
-    height: 200px;
+    height: auto;
     object-fit:contain;
     border-radius: 5px;
     margin-bottom: 10px;
