--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -160,13 +160,22 @@ button:hover {
     color: #333;
 }
 
-.game-reviews .review {
+.review {
     background: white;
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    width:100%;
+    width:250px;
+}
+
+.review img {
+    width: 100%;
+    height: 180px; 
+    object-fit: contain; 
+    border-radius: 5px;
+    display: block;
+    margin: 0 auto;
 }
 
 .review-box {
@@ -295,6 +304,11 @@ button:hover {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+    background:white;
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 <!--reviewpage-->
 
