--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -58,7 +58,7 @@ main {
     background: #e3f2fd;
 }
 
-.about-section, .contact-section, .user-profiles, .user-details, .friends-list, .shop-items, .order-confirmation, .highlights-content, .notifications-list, .activity-list {
+.about-section, .contact-section, .user-profiles, .user-details, .friends-list, .shop-items, .order-confirmation, .highlights-content, .activity-list {
     background: #bbdefb;
 }
 
@@ -114,7 +114,7 @@ button:hover {
     align-items:center;
     justify-content: center;
     width: 100%;
-    height:250px;
+    min-height:250px;
     margin:10px;
     box-sizing:border-box;
 }
@@ -558,6 +558,10 @@ button {
     justify-content: space-between;
 }
 
+.notifications-list {
+    background:#e3f2fd;
+}
+
 .notification-item img {
     width: 50px;
     height: 50px;
@@ -672,7 +676,7 @@ button {
     padding: 10px;
     margin:10px;
     width:100%;
-    height:250px;
+    min-height:250px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
     justify-content: center;
@@ -682,7 +686,7 @@ button {
 
 .game-item img {
     width: 100%;
-    height: 200px;
+    height: auto;
     object-fit:contain;
     border-radius: 5px;
     margin-bottom: 10px;
