--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -696,6 +696,7 @@ button {
     background: #007BFF;
     color: white;
     border: none;
+    width:100%;
     padding: 8px 12px;
     cursor: pointer;
     border-radius: 5px;
