--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -100,6 +100,7 @@ button:hover {
     gap: 20px;
     padding: 20px;
     justify-items: center;
+    align-items:center;
     box-sizing:border-box;
 }
 
