change style for received.html

--- a/csce242/projects/part3/styles.css
+++ b/csce242/projects/part3/styles.css
@@ -713,6 +713,14 @@ button {
     justify-content:center;
 }
 
+main.order-container {
+    display:flex;
+    flex-direction:column;
+    text-align:center;
+    align-items:center;
+    justify-content:center;
+}
+
 .order-img {
     max-width: 100%;
     height: auto;
