--- a/csce242/assignments/assignment09/styles.css
+++ b/csce242/assignments/assignment09/styles.css
@@ -8,7 +8,7 @@ body {
     width: 200px;
     position: relative;
 }
-.stair {
+.ladder {
     width: 150px;
     height: 250px;
     position: relative;
