--- a/csce242/assignments/assignment09/styles.css
+++ b/csce242/assignments/assignment09/styles.css
@@ -37,6 +37,7 @@ body {
     margin-top:10px;
     display:none;
     display:block;
+    justify-content: center;
     text-align:center;
 }
 #controls {
