--- a/csce242/assignments/assignment09/styles.css
+++ b/csce242/assignments/assignment09/styles.css
@@ -34,7 +34,7 @@ body {
     width:50px;
 }
 #climbStairs {
-    margin-top:10px auto;
+    margin:10px auto;
     display:block;
     text-align:center;
 }
